--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Simple-1</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="media.css">
     </head>
     <body>
-        <header class="header">
-            <section class="header__container container">
-                <img src="images/icon.png" alt="icon" class="header__icon">
-                <div class="header__title">WORKING<br> WITH design LAB</div>
-                <p class="header__text">We’ve been helping startups launch and grow their businesses. We help you to fill the gap between development,<br>design and product management.</p>
-                <img src="images/scroll.png" alt="scroll" class="header__scroll">
-            </section>
-        </header>
         <main>
+            <section class="header">
+                <div class="header__container container">
+                    <img src="images/icon.png" alt="icon" class="header__icon">
+                    <div class="header__title">WORKING<br> WITH design LAB</div>
+                    <p class="header__text">We’ve been helping startups launch and grow their businesses. We help you to fill the gap between development,<br>design and product management.</p>
+                    <img src="images/scroll.png" alt="scroll" class="header__scroll">
+                </div>
+            </section>
             <section class="about">
                 <div class="about__container container">
                     <fieldset class="about__fieldset fieldset">
